lib/aisreaders/include/ais_readers.h

	typedef void * HND_AIS;

////////////////////////////////////////////////////////////////////
/**
 * Type for representing null terminated char array ( aka C-String )
 * Array is always one byte longer ( for null character ) then string.
 *
 * 1. Only allocate pointer to c_string, no need to allocate memory space for all array:
 *    When function returns type c_string, and when need to get c_string from function
 *
 * 2. Must allocate memory space for c_string before use:
 *    array must be allocated and initialized when need to send data to function
 *    like password, white list sting, ...
 */
typedef const char * c_string;

////////////////////////////////////////////////////////////////////


///**
// *
// * uint32_t library_version;
// * c_string lib_version_str;
// *
// *
// * ### Usage 1: only need version in string format for printing
// *
// * lib_version_str = AIS_GetLibraryVersion(0);
// * puts(lib_version_str); //
// * ### or
// * puts(AIS_GetLibraryVersion(0)); //
// *
// * ### Usage 2: need version in
// * @param library_version
// * @return
// */
//DL_API
//c_string AIS_GetLibraryVersion(uint32_t *library_version);


/**
 * Get version of library in string format
 *
 * e.g. "AIS READERS library version= 4.9.1"
 * @return pointer to string
 */
DL_API
c_string AIS_GetLibraryVersionStr(void);


////////////////////////////////////////////////////////////////////

/**
 * Clear list of available devices for checking
 *
 */
DL_API
void AIS_List_EraseAllDevicesForCheck(void);


/**
 * Set list of available AIS reader device types
 *
 * @param device_type device_e device type by internal specification (enumeration)
 * @param device_id int Reader ID - set by Mifare Init Card
 * @return DL_STATUS
 */
DL_API
DL_STATUS AIS_List_AddDeviceForCheck(device_e device_type, int device_id);


/**
 * Remove specific reader type from list for checking
 *
 * @param device_type device_e device type by internal specification (enumeration)
 * @param device_id int Reader ID - set by Mifare Init Card
 * @return DL_STATUS
 */
DL_API
DL_STATUS AIS_List_EraseDeviceForCheck(device_e device_type, int device_id);


/**
 *
 * @param device_count number of attached devices
 * @return
 */
DL_API
DL_STATUS AIS_List_UpdateAndGetCount(int *device_count);


/**
 *
 * @param pDevice_HND
 * @param pDevice_Serial
 * @param pDevice_Type : look at enum E_KNOWN_DEVICE_TYPES / device_e from the file : ais_readers_list.h
 * @param pDevice_ID
 * @param pDevice_FW_VER
 * @param pDevice_CommSpeed
 * @param pDevice_FTDI_Serial
 * @param pDevice_isOpened
 * @param pDevice_Status
 * @param pSystem_Status
 * @return
 */
DL_API
DL_STATUS AIS_List_GetInformation(    //
		HND_AIS *pDevice_HND, //// assigned Handle
		c_string *pDevice_Serial, //// device serial number
		int *pDevice_Type, //// device type - device identification in AIS database
		int *pDevice_ID, //// device identification number (master)
		int *pDevice_FW_VER, //// version of firmware
		int *pDevice_CommSpeed, //// communication speed
		c_string *pDevice_FTDI_Serial, //// FTDI COM port identification
		int *pDevice_isOpened, //// is Device opened
		int *pDevice_Status, //// actual device status
		int *pSystem_Status //// actual system status
		);


///////////////////////////////////////////////////////////////////////////////

/**
 * AIS_List_OpenByHandle
 *
 * @param device : const HND_AIS DeviceHandle
 *
 * @return
 */
DL_API
DL_STATUS AIS_Open(const HND_AIS device);


DL_API
DL_STATUS AIS_Close(HND_AIS device);


// global reset service / library
DL_API
DL_STATUS AIS_Restart(HND_AIS device);


///////////////////////////////////////////////////////////////////////////////
// XXX :: Main pump

/**
 *
 *
 * command
 * Use this function for long commands if you want to get percent of execution
 *
 * Example AIS_GetLog_Set() start dumping LOG - function with execution about 10 seconds
 *
 * @param device
 * @param RealTimeEvents	indicate new RealTimeEvent(s)
 * @param LogAvailable		indicate new data in log buffer
 * @param LogUnread		    indicate unread LOG from the device (Incremental LOG)
 * @param DeviceStatus		the device status flags
 * @param cmdResponses		indicate command finish
 * @param cmdPercent		indicate percent of command execution - progress
 * @param TimeoutOccurred	debug only
 * @param Status			additional status
 * @return
 */
DL_API
DL_STATUS AIS_MainLoop(HND_AIS device,
		// event part
		int *RealTimeEvents, //
		int *LogAvailable, //
		int *LogUnread,
		// command part
		int *cmdResponses, //
		int *cmdPercent, //
		// status part
		int *DeviceStatus, //
		int *TimeoutOccurred, //
		int *Status //
		);


///////////////////////////////////////////////////////////////////////////////
// XXX :: Time functions

/**
 *
 * @param device
 * @param current_time	GMT timestamp
 * @param timezone		Seconds west of GMT
 * @param DST			is Daylight Saving Time used (If daylight-saving time is ever in use.)
 * @param offset		Seconds west of GMT if Daylight Saving Time used
 * @return
 */
DL_API
DL_STATUS AIS_GetTime(HND_AIS device, uint64_t *current_time, //
		int *timezone, int *DST, int *offset);


/**
 *
 * @param device
 * @param password
 * @param time_to_set	GMT timestamp
 * @param timezone		Seconds west of GMT
 * @param DST			is Daylight Saving Time used (If daylight-saving time is ever in use.)
 * @param offset		Seconds west of GMT if Daylight Saving Time used
 * @return
 */
DL_API
DL_STATUS AIS_SetTime(HND_AIS device, c_string password,
		const uint64_t time_to_set, //
		int timezone, int DST, int offset);


///////////////////////////////////////////////////////////////////////////////

DL_API
DL_STATUS AIS_BatteryGetInfo(HND_AIS device, int *battery_status,
		int *battery_available_percent);


///////////////////////////////////////////////////////////////////////////////
// XXX :: RTE functions

DL_API
int AIS_ReadRTE_Count(HND_AIS device);


DL_API
DL_STATUS AIS_ReadRTE( //
		HND_AIS device, //
		int * log_index, //
		int * log_action, //
		int * log_reader_id, //
		int * log_card_id, //
		int * log_system_id, //
		uint8_t nfc_uid[NFC_UID_MAX_LEN], //
		int * nfc_uid_len, //
		uint64_t * timestamp //
		);


///////////////////////////////////////////////////////////////////////////////
// XXX :: LOG functions

/**
 * Non-blocking function, must pooling (execute) AIS_MainLoop(),
 *    and wait for command_finish become not null (true).
 *    Percent of execution - progress are available too.
 *
 * @param device
 * @param password
 * @return
 */
DL_API
DL_STATUS AIS_GetLog(HND_AIS device, c_string password);


// parsed
DL_API
int AIS_ReadLog_Count(HND_AIS device);


/**
 *
 * @param nfc_uid			must provide allocated memory space
 */
DL_API
DL_STATUS AIS_ReadLog( //
		HND_AIS device, //
		int * log_index, //
		int * log_action, //
		int * log_reader_id, //
		int * log_card_id, //
		int * log_system_id, //
		uint8_t nfc_uid[NFC_UID_MAX_LEN], //
		int * nfc_uid_len, //
		uint64_t * timestamp //
		);


///////////////////////////////////////////////////////////////////////////////
// XXX :: Blacklist functions

/**
 * Non-blocking function, must pooling (execute) AIS_MainLoop(),
 *    and wait for command_finish become not null (true).
 *    Percent of execution - progress are available too.
 *
 * @param device
 * @param password
 * @param str_csv_blacklist comma separated values, start from 1
 * @return
 */
DL_API
DL_STATUS AIS_Blacklist_Write(HND_AIS device, c_string password,
		c_string str_csv_blacklist);


/**
 * Blocking function, no need to pooling (execute) AIS_MainLoop().
 *
 * @param device
 * @param password
 * @param str_csv_blacklist
 * @return
 */
DL_API
DL_STATUS AIS_Blacklist_Read(HND_AIS device, c_string password,
		c_string *str_csv_blacklist);